# ipc

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile  README.md
docs/: README_zh-CN.md
examples/: CMakeLists.txt  Makefile  receiver.cpp  sender.cpp
include/: assert.h  ipc.h
include/ipc/: assert.h  ipc.h
include/ipc/msgq/: msgq.h
include/ipc/pipe/: pipe.h
include/msgq/: msgq.h
src/: CMakeLists.txt  ipc.cpp
src/msgq/: msgq.cpp
src/pipe/: pipe.cpp
test/: CMakeLists.txt  test_msgq.cpp
test/correctness/: CMakeLists.txt  main.cpp  test_msgq.cpp  test_pipe.cpp
test/performance/: CMakeLists.txt  ipc_client.cpp  ipc_server.cpp  test_client.cpp  test_server.cpp
tools/utils/: assert.h  common.h  log.h
